--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="container-fluid p-5">
-          <h3>Login here</h3>
+          <h3>Login Here</h3>
             <form action="/action_page.php">
                 <div class="mb-3 mt-3">
                   <label for="email">Email:</label>
@@ -25,7 +25,6 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
               </form>         
-              <a href="/register">New User? Register Here</a>
    
         </div>
       </body>
