--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
               </form>         
+              <a href="/register">New User? Register Here</a>
    
         </div>
       </body>
