--- a/templates/register.html
+++ b/templates/register.html
@@ -16,6 +16,10 @@
           <h3>Register Here</h3>
             <form action="/action_page.php">
               <div class="mb-3 mt-3">
+                <label for="name">name:</label>
+                <input type="name" class="form-control" id="name" placeholder="Enter Name" name="name">
+              </div>
+              <div class="mb-3 mt-3">
                   <label for="email">Email:</label>
                   <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                 </div>
