--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,8 @@
 
         <div class="container-fluid p-5">
           <h3>Register Here</h3>
-            <form action="/action_page.php">
+          
+            <form action="/add-user" method="post">
               <div class="mb-3 mt-3">
                 <label for="name">name:</label>
                 <input type="name" class="form-control" id="name" placeholder="Enter Name" name="name">
@@ -24,8 +25,8 @@
                   <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                 </div>
                 <div class="mb-3">
-                  <label for="pwd">Password:</label>
-                  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+                  <label for="password">Password:</label>
+                  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
               </form>         
